--- a/style.css
+++ b/style.css
@@ -3,3 +3,11 @@
   padding: 0;
   margin: 0;
 }
+
+body {
+  background-color: hsl(275, 50%, 70%);
+}
+
+#global-controls {
+  background-color: hsl(60, 100%, 70%);
+}
