--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+  --main-background-color: hsl(275, 50%, 70%);
+  --secondary-background-color: hsl(60, 100%, 70%);
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -5,9 +10,9 @@
 }
 
 body {
-  background-color: hsl(275, 50%, 70%);
+  background-color: var(--main-background-color);
 }
 
 #global-controls {
-  background-color: hsl(60, 100%, 70%);
+  background-color: var(--secondary-background-color);
 }
