--- a/style.css
+++ b/style.css
@@ -13,24 +13,49 @@ body {
   background-color: var(--main-background-color);
 }
 
-#global-controls {
-  background-color: var(--secondary-background-color);
-  height: 15vh;
-}
+  #global-controls {
+    background-color: var(--secondary-background-color);
+    height: 15vh;
+  }
 
-#middle-container {
-  display: flex;
-  height: 70vh;
-}
+  #middle-container {
+    display: flex;
+    height: 70vh;
+  }
 
-#sound-controls {
-  flex: 1;
-}
+    #sound-controls {
+      flex: 1;
+    }
 
-#sound-board {
-  flex: 2;
-} 
+    #sound-board {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex: 2;
+    } 
 
-#sample-controls {
-  flex: 1;
-}
+      #board {
+        height: 75%;
+        width: 75%;
+      }
+
+        .sound-button {
+          height: 25%;
+          width: 25%;
+          border: 5px outset hsl(0, 0%, 100%);
+          margin: 0;
+        }
+
+        .sound-button:hover {
+          background-color: hsl(0, 0%, 75%);
+          border: 5px outset hsl(0, 0%, 75%);
+        }
+
+        .sound-button.selected {
+          background-color: hsl(0, 0%, 60%);
+          border: 5px outset hsl(0, 0%, 60%);
+        }
+
+    #sample-controls {
+      flex: 1;
+    }
